# face-reconstruction

./: .gitignore  CMakeLists.txt  README.md  README.txt  config.ini  main.cc  pch.h
data/basis/: README.txt
include/: config.h  facemodel.h  facesolver.h  rgbdscan.h  utils.h
model/mesh/: averageMesh_blackface.off
src/: facemodel.cpp  facesolver.cpp  landmarkdetection.cpp  main.cc  meshgenerationfrompcl.cpp  rgbdscan.cpp
vulkan_rendering/: .gitignore  CMakeLists.txt  README.md  Untitled-1  main.cpp
vulkan_rendering/libs/: stb_image.h  tiny_obj_loader.h
vulkan_rendering/shaders/: compile.sh  shader.vert  vert.spv
